Adjusted footer code across all HTML pages and adjusted styling. Footer should no longer cover content when resized on mobile devices. Added new screenshots of deployed website.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,8 +7,10 @@ body {
   /* background-repeat: no-repeat; */
   /* background-size: cover; */
   font-family: 'Alata', sans-serif;
-  min-height: 100vh;
-  margin-top: auto;
+  min-height: 400px;
+  margin-bottom: 100px;
+  clear: both;
+  /* margin-top: auto; */
 }
 
 #page-content {
